katars/tests/snaps/snapshots/snap_errors__unknown_module.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"import std.nonexistent\")"
---
Error: module 'std' has no submodule 'nonexistent'
   ╭─[<test>:1:12]
   │
 1 │ import std.nonexistent
   │            ─────┬─────  
   │                 ╰─────── module 'std' has no submodule 'nonexistent'
───╯
